[tool.poetry]
name = "subprocess-monitor"
version = "0.1.0"
description = "A service to manage monitor and spawn subprocess"
authors = ["JulianKimmig <julian.kimmig@gmx.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "*"
psutil = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
